MPS-31051 NPE in MatchingUtil.hash while applying TS rule
Apparently, some getSubOrSuperTypes() overrides give collection with null values